# swimming_game

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build.yml
angular/: README.md  angular.json  package-lock.json  package.json
angular/src/: Makefile  index.html
angular/src/app/: app.spec.ts  app.ts  swimming-game.component.html  swimming-game.component.ts  swimming-game.componet.css
angular/src/app/swimming-game/: swimming-game.html  swimming-game.ts
scripts/: boot_angular.sh  make_prompt.sh  make_source.sh
swimming_game/: __main__.py  __main__old.py
swimming_game_tui/: terminal.py
