[project]
name = "swimming-game"
version = "0.1.0"
description = "Rhythm game where you swim"
requires-python = ">=3.13.1, <3.14"
dependencies = [
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "swimming_game/**/*.py",
    "swimming_game/py.typed",
    "/README.md", "LICENSE",
]

exclude = [
  "*.json",
  "pkg/_compat.py",
]

[tool.hatch.build.targets.wheel]
packages = ["swimming_game"]
include = [
    "swimming_game/**/*.py",
    "swimming_game/py.typed",
    "/README.md", "LICENSE",
]
